--- a/zapatillasmujer.html
+++ b/zapatillasmujer.html
@@ -49,14 +49,14 @@ kickz4you.com
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Más popular</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
 <a href="zapatilla1.html"><div class="polaroid">
   <img src="zapatillas1.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas negras plataforma<br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="zapatilla21.html"><div class="polaroid">
   <img src="zapatillas21.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas high mikey mouse <br><b>20€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="zapatilla2.html"><div class="polaroid">
   <img src="zapatillas2.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas plataforma blancas <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="zapatilla3.html"><div class="polaroid">
   <img src="zapatillas3.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual high blancas<br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="zapatilla22.html"><div class="polaroid">
   <img src="zapatillas22.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas big platform blancas <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="zapatilla23.html"><div class="polaroid">
   <img src="zapatillas23.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas balenciaga type <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="zapatilla4.html"><div class="polaroid">
   <img src="zapatillas4.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas high negras <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="zapatilla24.html"><div class="polaroid">
   <img src="zapatillas24.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas blancas snoopy <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -138,7 +138,7 @@ kickz4you.com
 <a href="zapatilla25.html"><div class="polaroid">
   <img src="zapatillas25.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas blancas mikey mouse<br><b>20€</br></p>
 	 
   </div>
 </div></a>
@@ -147,7 +147,7 @@ kickz4you.com
 <a href="zapatilla26.html"><div class="polaroid">
   <img src="zapatillas26.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas switch mickey mouse <br><b>25€</br></p>
 	 
   </div>
 </div></a>
@@ -156,7 +156,7 @@ kickz4you.com
 <a href="zapatilla27.html"><div class="polaroid">
   <img src="zapatillas27.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas de plataforma garfield <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -165,7 +165,7 @@ kickz4you.com
 <a href="zapatilla28.html"><div class="polaroid">
   <img src="zapatillas28.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas oso rosa<br><b>25€</br></p>
 	 
   </div>
 </div></a>
@@ -179,7 +179,7 @@ kickz4you.com
 <a href="zapatilla29.html"><div class="polaroid">
   <img src="zapatillas29.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Botas blancas y negras <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -188,7 +188,7 @@ kickz4you.com
 <a href="zapatilla30.html"><div class="polaroid">
   <img src="zapatillas30.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Botas negras <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -197,7 +197,7 @@ kickz4you.com
 <a href="zapatilla31.html"><div class="polaroid">
   <img src="zapatillas31.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Botas beige <br><b>45€</br></p>
 	 
   </div>
 </div></a>
@@ -206,7 +206,7 @@ kickz4you.com
 <a href="zapatilla32.html"><div class="polaroid">
   <img src="zapatillas32.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Botas blancas <br><b>45€</br></p>
 	 
   </div>
 </div></a>
