--- a/zapatillas1.html
+++ b/zapatillas1.html
@@ -49,14 +49,14 @@ kickz4you.com
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Más popular</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
 <a href="zapatilla1.html"><div class="polaroid">
   <img src="zapatillas1.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas negras plataforma <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="zapatilla2.html"><div class="polaroid">
   <img src="zapatillas2.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas plataforma blancas <br><b>35€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="zapatilla3.html"><div class="polaroid">
   <img src="zapatillas3.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual high blancas <br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="zapatilla4.html"><div class="polaroid">
   <img src="zapatillas4.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas high negras <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="zapatilla5.html"><div class="polaroid">
   <img src="zapatillas5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual multicolor <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="zapatilla6.html"><div class="polaroid">
   <img src="zapatillas6.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual marrones <br><b>30€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="zapatilla7.html"><div class="polaroid">
   <img src="zapatillas7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas casual blancas high<br><b>40€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="zapatilla8.html"><div class="polaroid">
   <img src="zapatillas8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Zapatillas blancas balenciaga type <br><b>35€</br></p>
 	 
   </div>
 </div></a>
