--- a/camisetas1.html
+++ b/camisetas1.html
@@ -45,18 +45,18 @@ kickz4you.com
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
-<h1>Best sellers</h1>
+<h1>Más populares</h1>
 <table BORDER=0 WIDTH=90%  cellpadding=10 CELLSPACING=10 align="center">
 <tr>
 <td>
 <a href="camisetachica1.html"><div class="polaroid">
   <img src="camiseta1.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta ajustada <br><b>12,85€</br></p>
 	 
   </div>
 </div></a>
@@ -65,7 +65,7 @@ kickz4you.com
 <a href="camisetachica2.html"><div class="polaroid">
   <img src="camiseta2.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top corto con trasparencias <br><b>12,55€</br></p>
 	 
   </div>
 </div></a>
@@ -74,7 +74,7 @@ kickz4you.com
 <a href="camisetachica3.html"><div class="polaroid">
   <img src="camiseta3.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta aversize <br><b>8,55€</br></p>
 	 
   </div>
 </div></a>
@@ -83,7 +83,7 @@ kickz4you.com
 <a href="camisetachica4.html"><div class="polaroid">
   <img src="camiseta4.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Top ajsutado con escote<br><b>8,79€</br></p>
 	 
   </div>
 </div></a>
@@ -97,7 +97,7 @@ kickz4you.com
 <a href="camisetachico1.html"><div class="polaroid">
   <img src="camiseta5.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta básica <br><b>9,45€</br></p>
 	 
   </div>
 </div></a>
@@ -106,7 +106,7 @@ kickz4you.com
 <a href="camisetachico2.html"><div class="polaroid">
   <img src="camiseta6.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta con estampado <br><b>9,99€</br></p>
 	 
   </div>
 </div></a>
@@ -115,7 +115,7 @@ kickz4you.com
 <a href="camisetachico3.html"><div class="polaroid">
   <img src="camiseta7.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>camiseta básica <br><b>11,99€</br></p>
 	 
   </div>
 </div></a>
@@ -124,7 +124,7 @@ kickz4you.com
 <a href="camisetachico4.html"><div class="polaroid">
   <img src="camiseta8.jpg" alt="Norway" style="width:100%">
   <div class="container">
-    <p>Anillos acero inoxidable <br><b>9,5€</br></p>
+    <p>Camiseta de manga larga con estampado <br><b>14,55€</br></p>
 	 
   </div>
 </div></a>
