--- a/camisetachico1.html
+++ b/camisetachico1.html
@@ -44,7 +44,7 @@
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
@@ -57,7 +57,7 @@
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 9,45€ </h1>
-<h1> Descripción del producto </h1>
+<h1> Camiseta básica </h1>
 <p>Estilo:	Casual</p>
 <p>Color:	Negro</p>
 <p>Tipo de Estampado:	ninguno</p>
