--- a/camiseta12.html
+++ b/camiseta12.html
@@ -44,7 +44,7 @@
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
@@ -56,11 +56,11 @@
 <img class="camiseta1" src="camiseta12.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
-<h1> Descripción del producto </h1>
+<div class="camiseta1"><h1>Precio: 9,99€ </h1>
+<h1> Camiseta básica con logo </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	blanco + azul y amarillo</p>
-<p>Tipo de Estampado:	Frase + tiras bicolores</p>
+<p>Color:	Violeta</p>
+<p>Tipo de Estampado:	Logo pequeño en la esquina</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
 <p>Longitud de la Manga:	manga media</p>
@@ -68,9 +68,9 @@
 <p>Temporada:	Verano</p>
 <p>Composición:	100% Algodón</p>
 <p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
+<p>Tejido:	Elástico ligero</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
+<p>Tipo de ajuste:	oversize</p>
 <p>Tipo de Cierre-Botonadura:	no hay</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
