--- a/camisetachico2.html
+++ b/camisetachico2.html
@@ -57,9 +57,9 @@
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 9,99€ </h1>
-<h1> Descripción del producto </h1>
+<h1> Camiseta con estampado </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	Violeta</p>
+<p>Color:	Gris</p>
 <p>Tipo de Estampado:	no hay</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
