--- a/camisetachico2dos.html
+++ b/camisetachico2dos.html
@@ -56,11 +56,11 @@
 <img class="camiseta1" src="camiseta6dos.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
-<h1> Descripción del producto </h1>
+<div class="camiseta1"><h1>Precio: 9,99€ </h1>
+<h1> Camiseta con estampado </h1>
 <p>Estilo:	Casual</p>
 <p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
+<p>Tipo de Estampado:	no hay</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
 <p>Longitud de la Manga:	manga media</p>
@@ -70,8 +70,8 @@
 <p>Material:	Algodón</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
+<p>Tipo de ajuste:	oversize</p>
+<p>Tipo de Cierre-Botonadura:	no hay</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
 <table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
