--- a/camiseta9dos.html
+++ b/camiseta9dos.html
@@ -44,7 +44,7 @@
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
@@ -56,11 +56,11 @@
 <img class="camiseta1" src="camiseta9dos.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
-<h1> Descripción del producto </h1>
+<div class="camiseta1"><h1>Precio: 9,99€ </h1>
+<h1> Camiseta Básia</h1>
 <p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
+<p>Color:	Rosa</p>
+<p>Tipo de Estampado:	Nada</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
 <p>Longitud de la Manga:	manga media</p>
@@ -70,8 +70,8 @@
 <p>Material:	Algodón</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
+<p>Tipo de ajuste:	oversize</p>
+<p>Tipo de Cierre-Botonadura:	No hay</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
 <table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
