--- a/pantalones10.html
+++ b/pantalones10.html
@@ -59,7 +59,7 @@
 <div class="camiseta1"><h1>Precio: 19,95€ </h1>
 <h1> Descripción del producto </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
+<p>Color:	Blanco</p>
 <p>Tipo de Estampado:	Frase</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
