--- a/camiseta14.html
+++ b/camiseta14.html
@@ -44,7 +44,7 @@
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
@@ -56,16 +56,16 @@
 <img class="camiseta1" src="camiseta14.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
-<h1> Descripción del producto </h1>
+<div class="camiseta1"><h1>Precio: 14,55€ </h1>
+<h1> Camiseta manga larga </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	blanco + azul y amarillo</p>
-<p>Tipo de Estampado:	Frase + tiras bicolores</p>
-<p>Escote:	cuello redondo</p>
+<p>Color:	Negro</p>
+<p>Tipo de Estampado:	Logo</p>
+<p>Escote:	cuello alto</p>
 <p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
+<p>Longitud de la Manga:	manga larga</p>
+<p>Tipos de Manga:	Hombros ajustados</p>
+<p>Temporada:	Invierno</p>
 <p>Composición:	100% Algodón</p>
 <p>Material:	Algodón</p>
 <p>Tejido:	Elástico Ligero</p>
