--- a/joya4.html
+++ b/joya4.html
@@ -56,37 +56,12 @@
 <img class="mickey" src="joya4.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 12€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
-<p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
-<h3>Tallas disponibles: S M L XL </h3>
-<h3> Colores disponibles:</h3>
-<table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
-<tr>
-<td>
-<img src="gris.jpg" class="novedades1">
-</td>
-<td>
-<img src="beige.jpg" class="novedades2">
-</td>
-<td>
-<img src="negro.jpg" class="novedades2">
-</td>
-</tr>
-</table>
+	<P> Anillos con forma de "mickey mouse" </p>
+	<p> que cuentas con una caa protectora para</p>
+	<p> evitar el roce con el dedo. Su composición </p>
+	<p> de acero inoxidable lo protege de la corrosión</p>
 </div>
 <br>
 
