--- a/pantalones10dos.html
+++ b/pantalones10dos.html
@@ -58,20 +58,18 @@
 <td>
 <div class="camiseta1"><h1>Precio: 19,95€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
+<p>Estilo:	Sport</p>
+<p>Color:	Beige</p>
+<p>Tipo de Estampado:	Logo</p>
 <p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
+<p>Tipos de el pantalón:	Largo</p>
+<p>Temporada:	Cualquiera</p>
 <p>Composición:	100% Algodón</p>
 <p>Material:	Algodón</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
+<p>Tipo de ajuste:	suelto</p>
+<p>Tipo de Cierre-Botonadura:	cordon</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
 <table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
