--- a/joya6ocho.html
+++ b/joya6ocho.html
@@ -52,7 +52,7 @@
 <table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="camiseta1" src="sagitario.jpg">
+<img class="camiseta1" src="aries.jpg">
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 12€ </h1>
