--- a/joya6seis.html
+++ b/joya6seis.html
@@ -53,14 +53,14 @@
 <table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="camiseta1" src="sagitario.jpg">
+<img class="camiseta1" src="escorpio.jpg">
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 12€ </h1>
 <h1> Descripción del producto </h1>
 	<p> Collar de acero inoxidable de color</p>
 	<p>oro y decorado del signo del zodíaco</p>
-	<P> Sgno correspondiente: Scorpio </p>
+	<P> Sgno correspondiente: Escorpio </p>
 	<p> Ideal para cualquier temporada del año</p>
 	<p> ya que no deja marac en la piel ni se decolora </p>
 </div>
