--- a/camisetachica3.html
+++ b/camisetachica3.html
@@ -44,7 +44,7 @@
     </div>
   </li>
   <li><a href="novedades1.html"><h4>Novedades</h4></a></li>
-  <li><a href="#news"><h4>Sobre nosotros</h4></a></li>
+  <li><a href="nosotros.html"><h4>Sobre nosotros</h4></a></li>
   <li class="icono"><a href="soporte.html"><div class="tooltip"><h4> <i class="gg-comment"></i></h4> <span class="tooltiptext"><h4>Atención al cliente</h4></span></div></a></li>
 </ul></div>
 
@@ -56,21 +56,21 @@
 <img class="camiseta1" src="camiseta3.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
-<h1> Descripción del producto </h1>
+<div class="camiseta1"><h1>Precio: 8,55€ </h1>
+<h1> Camiseta oversize </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase + imagen</p>
+<p>Color:	Blanca</p>
+<p>Tipo de Estampado:	Frase + logo</p>
 <p>Escote:	cuello redondo</p>
 <p>Largo:	Largo</p>
 <p>Longitud de la Manga:	manga corta</p>
-<p>Tipos de Manga:	corta</p>
+<p>Tipos de Manga:	Media manga</p>
 <p>Temporada:	Verano</p>
 <p>Composición:	100% Algodón</p>
 <p>Material:	Algodón</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
+<p>Tipo de ajuste:	oversize</p>
 <p>Tipo de Cierre-Botonadura:	no hay</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
