--- a/joya8.html
+++ b/joya8.html
@@ -50,43 +50,24 @@
 
 <br>
 
-<table BORDER=0 WIDTH=100%  cellpadding=0 CELLSPACING=0 align="center">
+<table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="camiseta1" src="joya8.jpg">
+<img class="camiseta1" src="sagitario.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 12€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
-<p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
-<h3>Tallas disponibles: S M L XL </h3>
-<h3> Colores disponibles:</h3>
-<table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
-<tr>
-<td>
-<img src="gris.jpg" class="novedades1">
-</td>
-<td>
-<img src="beige.jpg" class="novedades2">
-</td>
-<td>
-<img src="negro.jpg" class="novedades2">
-</td>
-</tr>
-</table>
+	<p> Collar de acero inoxidable de color</p>
+	<p>plata y decorado de corazones y </p>
+	<p>una palabra:"no-angel". </p>
+	<p> Ideal para cualquier temporada del año</p>
+	<p> ya que no deja marca en la piel ni se decolora </p>
+</div>
+<br>
+
+<div class="comprar">
+<button onclick="myFunction()"><h3>Comprar</h3></button>
 </div>
 <br>
 
