--- a/joya8.html
+++ b/joya8.html
@@ -53,7 +53,7 @@
 <table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="camiseta1" src="sagitario.jpg">
+<img class="camiseta1" src="joya8.jpg">
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 12€ </h1>
