--- a/joya2dos.html
+++ b/joya2dos.html
@@ -53,7 +53,7 @@
 <table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="camiseta1" src="joya2uno.jpg">
+<img class="camiseta1" src="joya2dos.jpg">
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 10€ </h1>
