--- a/joya5dos.html
+++ b/joya5dos.html
@@ -53,7 +53,7 @@
 <table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="camiseta1" src="joya5.jpg">
+<img class="camiseta1" src="joya5dos.jpg">
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 18€ </h1>
