--- a/camisetachico1dos.html
+++ b/camisetachico1dos.html
@@ -50,7 +50,7 @@
 
 <br>
 
-<table BORDER=0 WIDTH=100%  cellpadding=1 CELLSPACING=0 align="center">
+<table BORDER=0 WIDTH=100%  cellpadding=2 CELLSPACING=0 align="left">
 <tr>
 <td>
 <img class="camiseta1" src="camiseta5dos.jpg">
