--- a/camisetachico1dos.html
+++ b/camisetachico1dos.html
@@ -50,7 +50,7 @@
 
 <br>
 
-<table BORDER=0 WIDTH=100%  cellpadding=0 CELLSPACING=-5 align="left">
+<table BORDER=0 WIDTH=100%  cellpadding=0 CELLSPACING=-5 align="center">
 <tr>
 <td>
 <img class="camiseta1" src="camiseta5dos.jpg">
