--- a/bolso5.html
+++ b/bolso5.html
@@ -56,37 +56,15 @@
 <img class="camiseta1" src="bolso5uno.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 15€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
-<p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
-<h3>Tallas disponibles: S M L XL </h3>
-<h3> Colores disponibles:</h3>
-<table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
-<tr>
-<td>
-<img src="gris.jpg" class="novedades1">
-</td>
-<td>
-<img src="beige.jpg" class="novedades2">
-</td>
-<td>
-<img src="negro.jpg" class="novedades2">
-</td>
-</tr>
-</table>
+	<p> Este artículo se caracteriza por su comodidad y su tamaño</p>
+	<p> además de su estilo. Es una riñonera  de color </p>
+	<p> negro y cuero liso. Además, viene con una correa que reajusta</p>
+	<p>su longitud para garantizar la comodidad de quien lo lleve. </p>
+	<p> Viene con una cadena de acero inoxidable de decoración y relieve.</p>
+	<p>Forma parte de la colección otoño/invierno y su composición</p>
+	<P> de cuero lo hace ideal para casi cualquier situación .</p>
 </div>
 <br>
 
