--- a/bolso6.html
+++ b/bolso6.html
@@ -58,7 +58,12 @@
 <td>
 <div class="camiseta1"><h1>Precio: 9,5€ </h1>
 <h1> Descripción del producto </h1>
-
+<p> Este artículo se caracteriza por su comodidad y su tamaño</p>
+	<p> además de su estilo. Es un bolso  de color </p>
+	<p> negro y hecho de cuero. Además, viene con un asa (cadena) que reajusta</p>
+	<p>su longitud para garantizar la comodidad de quien lo lleve. </p>
+	<p> Viene con un estampado de piel de serpiente . Su composición</p>
+	<P>  de cuero lo hace ideal para casi cualquier situación .</p>
 </div>
 <br>
 
