--- a/bolso8dos.html
+++ b/bolso8dos.html
@@ -56,37 +56,14 @@
 <img class="camiseta1" src="bolso8dos.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 40€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
-<p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
-<h3>Tallas disponibles: S M L XL </h3>
-<h3> Colores disponibles:</h3>
-<table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
-<tr>
-<td>
-<img src="gris.jpg" class="novedades1">
-</td>
-<td>
-<img src="beige.jpg" class="novedades2">
-</td>
-<td>
-<img src="negro.jpg" class="novedades2">
-</td>
-</tr>
-</table>
+<p> Este artículo se caracteriza por su comodidad y su capacidad</p>
+	<p> además de su estilo. Es un bolso  de color </p>
+	<p> negro y hecho de cuero. Además, viene con un asa  que reajusta</p>
+	<p>su longitud para garantizar la comodidad de quien lo lleve. </p>
+	<p> Viene sin ningún estampado . Su composición</p>
+	<P>  de cuero lo hace ideal para casi cualquier situación .</p>
 </div>
 <br>
 
