--- a/gorro1.html
+++ b/gorro1.html
@@ -58,8 +58,13 @@
 <td>
 <div class="camiseta1"><h1>Precio: 10€ </h1>
 <h1> Descripción del producto </h1>
-	<p> Beanie monocolor lavanda hecho de lana</p>
-	<p> Ideal para situaciones de frio </p>
+	<p>Estilo:	Casual</p>
+<p>Color:	lavanda</p>
+<p>Temporada:	invierno</p>
+<p>Composición:	lana</p>
+<p>Tejido:	Elástico Ligero</p>
+<p>Tipo de ajuste:	ceñido</p>
+	<p>tipo de gorro: beanie</p>
 </div>
 <br>
 
