--- a/gorro2dos.html
+++ b/gorro2dos.html
@@ -61,10 +61,11 @@
 <p>Estilo:	Casual</p>
 <p>Color:	lavanda</p>
 <p>Tipo de Estampado:	Frase</p>
-<p>Temporada:	Verano</p>
+<p>Temporada:	invierno</p>
 <p>Composición:	algodoón y pelo sintético</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Tipo de ajuste:	ceñido</p>
+	<p> tipo de gorro:bukcet</p>
 </div>
 <br>
 
