--- a/gorro2.html
+++ b/gorro2.html
@@ -60,11 +60,11 @@
 <h1> Descripción del producto </h1>
 <p>Estilo:	Casual</p>
 <p>Color:	lavanda</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Temporada:	Verano</p>
+<p>Temporada:	Invierno</p>
 <p>Composición:	algodoón y pelo sintético</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Tipo de ajuste:	ceñido</p>
+	<p> Tipo de gorro:Bucket</p>
 </div>
 <br>
 
