--- a/gorro8.html
+++ b/gorro8.html
@@ -61,10 +61,10 @@
 <p>Estilo:	Casual</p>
 <p>Color:	Blanco roto</p>
 <p>Temporada:	invierno</p>
-<p>Composición:	lana</p>
+<p>Composición:	Tela</p>
 <p>Tejido:	elástico</p>
 <p>Tipo de ajuste:	ceñido</p>
-	<p>tipo de gorro: Beanie</p>
+	<p>tipo de gorro: Gorra</p>
 </div>
 <br>
 
