--- a/pantalones7.html
+++ b/pantalones7.html
@@ -56,22 +56,17 @@
 <img class="camiseta1" src="pantalones7.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 19,99€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
+<p>Estilo:	Sport</p>
+<p>Color:	Verde</p>
 <p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
+<p>Longitud del pantalón:	largo</p>
+<p>Temporada:	Cualquiera</p>
+<p>Composición:	Algodón</p>
+<p>Tejido:	Elástico </p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
+<p>Tipo de ajuste:	loose</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
 <table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
