--- a/gorro13dos.html
+++ b/gorro13dos.html
@@ -50,17 +50,21 @@
 
 <br>
 
-<table BORDER=0 WIDTH=100%  cellpadding=0 CELLSPACING=0 align="center">
+<table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
 <img class="mickey" src="joya13dos.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 15€ </h1>
+<div class="camiseta1"><h1>Precio: 17€ </h1>
 <h1> Descripción del producto </h1>
-	<P> Gafas con lente negro y 0 dioptrías </p>
-	<p> de estructura negra y forma curva .</p>
-	<P> Ideal para una salida casual e informal.</p>
+	<p>Estilo:	Casual</p>
+<p>Color:	negro</p>
+<p>Temporada:	verano</p>
+<p>Composición:	tela</p>
+<p>Tejido:	rígido</p>
+<p>Tipo de ajuste:	ceñido</p>
+	<p>tipo de gorro: gorra</p>
 </div>
 <br>
 
