--- a/gorro13dos.html
+++ b/gorro13dos.html
@@ -53,7 +53,7 @@
 <table BORDER=0 WIDTH=100%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
 <td>
-<img class="mickey" src="joya13dos.jpg">
+<img class="mickey" src="gorro13dos.jpg">
 </td>
 <td>
 <div class="camiseta1"><h1>Precio: 17€ </h1>
