--- a/novedad2.html
+++ b/novedad2.html
@@ -56,21 +56,21 @@
 <img class="camiseta1" src="novedades2.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 15€ </h1>
 <h1> Descripción del producto </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
+<p>Color:	blanco</p>
+<p>Tipo de Estampado:	ninguno</p>
+<p>Escote:	cuello abierto</p>
+<p>Largo:	corto</p>
+<p>Longitud de la Manga:	manga larga</p>
 <p>Tipos de Manga:	Hombros caídos</p>
 <p>Temporada:	Verano</p>
 <p>Composición:	100% Algodón</p>
 <p>Material:	Algodón</p>
 <p>Tejido:	Elástico Ligero</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
+<p>Tipo de ajuste:	over-size</p>
 <p>Tipo de Cierre-Botonadura:	Jersey</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
