--- a/pantalones20dos.html
+++ b/pantalones20dos.html
@@ -59,19 +59,14 @@
 <div class="camiseta1"><h1>Precio: 19,95€ </h1>
 <h1> Descripción del producto </h1>
 <p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
+<p>Color:	Azul</p>
+<p>Tipo de Estampado:	Ninguno</p>
+<p>Longitud del pantalón: Largo</p>
+<p>Temporada:	Cualquiera</p>
+<p>Composición:	Tela</p>
+<p>Tejido:	Rígido</p>
 <p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
+<p>Tipo de ajuste:	extra grande</p>
 <h3>Tallas disponibles: S M L XL </h3>
 <h3> Colores disponibles:</h3>
 <table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
