--- a/zapatilla1.html
+++ b/zapatilla1.html
@@ -58,21 +58,16 @@
 <td>
 <div class="camiseta1"><h1>Precio: 19,95€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	Casual</p>
-<p>Color:	Gris</p>
-<p>Tipo de Estampado:	Frase</p>
-<p>Escote:	cuello redondo</p>
-<p>Largo:	Largo</p>
-<p>Longitud de la Manga:	manga media</p>
-<p>Tipos de Manga:	Hombros caídos</p>
-<p>Temporada:	Verano</p>
-<p>Composición:	100% Algodón</p>
-<p>Material:	Algodón</p>
-<p>Tejido:	Elástico Ligero</p>
-<p>Transparente:	No</p>
-<p>Tipo de ajuste:	ceñido</p>
-<p>Tipo de Cierre-Botonadura:	Jersey</p>
-<h3>Tallas disponibles: S M L XL </h3>
+<p>Estilo:	informal</p>
+<p>Color:	multicolor</p>
+<p>Temporada:	todas</p>
+<p>Material:	plástico y goma</p>
+<p>Tejido:	rígido</p>
+<p>Tipo de Cierre:	cordones</p>
+<p>Tipo de zapatilla: sport</p>
+<p> Tipo de suela: Gel </p>
+	
+<h3>Tallas disponibles: 36 37 38 39  40 41 </h3>
 <h3> Colores disponibles:</h3>
 <table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
 <tr>
