--- a/zapatilla1.html
+++ b/zapatilla1.html
@@ -58,7 +58,7 @@
 <td>
 <div class="camiseta1"><h1>Precio: 19,95€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	informal</p>
+<p>Estilo:	vasual</p>
 <p>Color:	multicolor</p>
 <p>Temporada:	todas</p>
 <p>Material:	plástico y goma</p>
@@ -68,20 +68,6 @@
 <p> Tipo de suela: Gel </p>
 	
 <h3>Tallas disponibles: 36 37 38 39  40 41 </h3>
-<h3> Colores disponibles:</h3>
-<table BORDER=0 WIDTH=50%  cellpadding=10 CELLSPACING=0 align="center">
-<tr>
-<td>
-<img src="gris.jpg" class="novedades1">
-</td>
-<td>
-<img src="beige.jpg" class="novedades2">
-</td>
-<td>
-<img src="negro.jpg" class="novedades2">
-</td>
-</tr>
-</table>
 </div>
 <br>
 
