--- a/zapatilla8.html
+++ b/zapatilla8.html
@@ -62,7 +62,7 @@
 <p>Color:	Blanco</p>
 <p>Temporada:	todas</p>
 <p>Material:	Plástico y silk</p>
-<p>Tejido:	Bando</p>
+<p>Tejido:	Blando</p>
 <p>Tipo de Cierre:	Calcetin</p>
 <p> Tipo de suela: Goma </p>	
 <h3>Tallas disponibles: 40 41 42 43 44 45 </h3>
