--- a/zapatilla1.html
+++ b/zapatilla1.html
@@ -56,16 +56,16 @@
 <img class="camiseta1" src="zapatillas1.jpg">
 </td>
 <td>
-<div class="camiseta1"><h1>Precio: 19,95€ </h1>
+<div class="camiseta1"><h1>Precio: 35€ </h1>
 <h1> Descripción del producto </h1>
-<p>Estilo:	vasual</p>
-<p>Color:	multicolor</p>
+<p>Estilo:	casual</p>
+<p>Color:	negro</p>
 <p>Temporada:	todas</p>
 <p>Material:	plástico y goma</p>
 <p>Tejido:	rígido</p>
 <p>Tipo de Cierre:	cordones</p>
-<p>Tipo de zapatilla: sport</p>
-<p> Tipo de suela: Gel </p>
+<p>Tipo de zapatilla: casual</p>
+<p> Tipo de suela: Goma </p>
 	
 <h3>Tallas disponibles: 36 37 38 39  40 41 </h3>
 </div>
