--- a/camisetahombre.html
+++ b/camisetahombre.html
@@ -54,7 +54,7 @@ kickz4you.com
 <tr>
 <td>
 <a href="camisetachico1.html"><div class="polaroid">
-  <img src="camiseta5.jpg" alt="Norway" style="width:100%">
+  <img src="camiseta5.jpg"  style="width:100%">
   <div class="container">
     <p>Camiseta básica<br><b>9,45€</br></p>
 	 
@@ -63,7 +63,7 @@ kickz4you.com
 </td>
 <td>
 <a href="camiseta12.html"><div class="polaroid">
-  <img src="camiseta12.jpg" alt="Norway" style="width:100%">
+  <img src="camiseta12.jpg" style="width:100%">
   <div class="container">
     <p>Camiseta básica con logo<br><b>9,99€</br></p>
 	 
@@ -72,7 +72,7 @@ kickz4you.com
 </td>
 <td>
 <a href="camisetachico2.html"><div class="polaroid">
-  <img src="camiseta6.jpg" alt="Norway" style="width:100%">
+  <img src="camiseta6.jpg"  style="width:100%">
   <div class="container">
     <p>Camiseta con estampado <br><b>9,99€</br></p>
 	 
@@ -81,7 +81,7 @@ kickz4you.com
 </td>
 <td>
 <a href="camisetachico4.html"><div class="polaroid">
-  <img src="camiseta8.jpg" alt="Norway" style="width:100%">
+  <img src="camiseta8.jpg"  style="width:100%">
   <div class="container">
     <p>Camiseta manga larga con estampado <br><b>14,55€</br></p>
 	 
